<resources>
    <string name="app_name">Project Base</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>

    <!-- Login -->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email_required_error">Please enter email address</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="password_required_error">Please enter password</string>
    <string name="password_length_error">Password must be more than 5 characters</string>
    <string name="generic_error_message">Oops, something went wrong. Please retry again</string>

    <!--Registration-->
    <string name="register_email_hint">Email</string>
    <string name="register_name_hint">Full name</string>
    <string name="register_pass_word_hint">Password</string>
    <string name="register_confirm_pass_word_hint">Confirm password</string>
    <string name="register_birthday_hint">Birthday</string>
    <string name="register_button_text">Create Account</string>
    <string name="register_error_email_required_message">Please enter email address.</string>
    <string name="register_error_email_invalid_message">Invalid email address.</string>
    <string name="register_error_username_required_message">Please enter full name.</string>
    <string name="register_error_birthday_required_message">Please pick your birthday.</string>
    <string name="register_error_password_required_message">Please enter password.</string>
    <string name="register_error_password_too_short">The password must be more than 5 characters.</string>
    <string name="register_error_confirm_password_required_message">Please enter confirm password.</string>
    <string name="register_error_confirm_password_not_matched">Passwords not matched.</string>
    <string name="title_confirm_code">We\'ve sent a code to your email address.\nPlease check your inbox and enter the code to continue.</string>
    <string name="title_register_success">Register Account</string>
    <string name="title_register_success_message">Account created successfully"</string>
    <string name="code">code</string>
    <string name="submit">Submit</string>

    <string name="greeting">Greeting</string>
</resources>