<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterFragment">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.datdang.projectbase.ui.register.vm.RegisterViewModel" />

        <variable
            name="clickListener"
            type="com.datdang.projectbase.ui.register.component.OnBirthdayClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="60dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginLeft="@dimen/space_16dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:layout_marginRight="@dimen/space_16dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/RegisterEditText"
                        android:hint="@string/register_email_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                    <TextView
                        android:id="@+id/tv_email_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_8dp"
                        app:errorText="@{viewModel.emailError}"
                        app:visible="@{viewModel.emailError != null}"
                        tools:text="Hello, I am Error" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginLeft="@dimen/space_16dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:layout_marginRight="@dimen/space_16dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        style="@style/RegisterEditText"
                        android:hint="@string/register_name_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:text="@={viewModel.username}" />

                    <TextView
                        android:id="@+id/tv_username_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_8dp"
                        app:errorText="@{viewModel.usernameError}"
                        app:visible="@{viewModel.usernameError != null}"
                        tools:text="Hello, I am Error" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/view_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginLeft="@dimen/space_16dp"
                    android:layout_marginTop="@dimen/space_24dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:layout_marginRight="@dimen/space_16dp"
                    android:onClick="@{() -> clickListener.onBirthdayClicked()}">

                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/editTextBackground"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/register_birthday_hint"
                        android:paddingStart="@dimen/space_15dp"
                        android:text="@{viewModel.birthDay}"
                        android:textAppearance="?android:attr/textAppearanceMediumInverse"
                        android:textColor="?attr/editTextColor"
                        tools:text="Birthday" />

                    <ImageView
                        android:id="@+id/iv_info_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_birthday"
                        android:layout_alignEnd="@+id/tv_birthday"
                        android:layout_alignBottom="@+id/tv_birthday"
                        android:contentDescription="@null"
                        android:paddingStart="@dimen/space_4dp"
                        android:paddingLeft="@dimen/space_4dp"
                        android:paddingEnd="@dimen/space_4dp"
                        android:paddingRight="@dimen/space_4dp"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/tv_birthday_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_birthday"
                        android:layout_marginEnd="@dimen/space_8dp"
                        app:errorText="@{viewModel.birthDayError}"
                        app:visible="@{viewModel.birthDayError != null}"
                        tools:text="Hello, I am Error" />

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginLeft="@dimen/space_16dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:layout_marginRight="@dimen/space_16dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="@{!TextUtils.isEmpty(viewModel.password)}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pass_word"
                        style="@style/RegisterEditText"
                        android:hint="@string/register_pass_word_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                    <TextView
                        android:id="@+id/tv_password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_8dp"
                        app:errorText="@{viewModel.passwordError}"
                        app:visible="@{viewModel.passwordError != null}"
                        tools:text="Hello, I am Error" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginLeft="@dimen/space_16dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:layout_marginRight="@dimen/space_16dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="@{!TextUtils.isEmpty(viewModel.confirmPassword)}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_confirm_pass_word"
                        style="@style/RegisterEditText"
                        android:hint="@string/register_confirm_pass_word_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.confirmPassword}" />

                    <TextView
                        android:id="@+id/tv_confirm_password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_8dp"
                        app:errorText="@{viewModel.confirmPasswordError}"
                        app:visible="@{viewModel.confirmPasswordError != null}"
                        tools:text="Hello, I am Error" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_big_XX">

                    <Button
                        android:id="@+id/btn_submit"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.register()}"
                        android:text="@string/register_button_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_percent=".5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/view_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            bind:showProgress="@{viewModel.showLoading}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>